--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Plans</title>
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
 
-    <script src="./js/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
 
-    <script src="./js/jquery.slinky.js"></script>
-    <script src="./js/jquery.marquee.min.js"></script>
-    <link rel="stylesheet" href="./style/slinky.min.css" />
+    <script src="js/jquery.slinky.js"></script>
+    <script src="js/jquery.marquee.min.js"></script>
+    <link rel="stylesheet" href="style/slinky.min.css" />
   </head>
   <body>
     <div class="wrapper">
