--- a/fashion.html
+++ b/fashion.html
@@ -361,22 +361,22 @@
                             помощью отраслевого решения
                         </p>
                     </div>
-                    <form action="#" class="offer__form form-offer">
+                    <form  id="form" class="offer__form form-offer">
                         <div class="form-offer__body">
                             <label for="name" class="form-offer__label">Имя <span>*</span></label>
-                            <input id="name" name="name" type="text" class="form-offer__input" placeholder="Напирмер, Александр" />
-                            <div class="form-offer__error">Неверно заполнено поле</div>
+                            <input id="name" name="name" type="text" class="form-offer__input"  placeholder="Напирмер, Александр" />
+                            <div class="form-offer__error"></div>
                         </div>
                         <div class="form-offer__body">
                             <label for="phone" class="form-offer__label">Ваш телефон <span>*</span></label>
-                            <input id="phone" name="phone" type="tel" class="form-offer__input" placeholder="Напирмер, +7 000 000-00-00" />
-                            <div class="form-offer__error">Неверно заполнено поле</div>
+                            <input id="phone" name="phone" type="tel" class="form-offer__input"  placeholder="Напирмер, +7 000 000-00-00" />
+                            <div class="form-offer__error"></div>
                         </div>
 
                         <div class="form-offer__body">
                             <label for="email" class="form-offer__label">Ваш Email <span>*</span></label>
-                            <input id="email" name="email" type="email" class="form-offer__input" placeholder="Напирмер, youbrand@mail.ru" />
-                            <div class="form-offer__error">Неверно заполнено поле</div>
+                            <input id="email" name="email" type="email" class="form-offer__input"  placeholder="Напирмер, youbrand@mail.ru" />
+                            <div class="form-offer__error"></div>
                         </div>
                         <div class="form-offer__personal">
                             Нажимая кнопку «Отправить», вы подтверждаете, что принимаете Пользовательское соглашение и даете
@@ -514,6 +514,9 @@
       </footer>
     </div>
     <script src="/js/swiper-bundle.min.js"></script>
+    <script src="/js/jquery-1.11.3.min.js"></script>
+    <script src="/js/imask.js"></script>
+    <script src="/js/jquery.validate.min.js"></script>
     <script src="/js/script-fashion.js"></script>
 </body>
 
